<resources>
    <string name="app_name">Lab4</string>
    <string name="audio_player">Аудіоплеєр</string>
    <string name="video_player">Відеоплеєр</string>
    <string name="internet_media">Медіа з Інтернету</string>
    <string name="select_file">Вибрати файл</string>
    <string name="play">Програвати</string>
    <string name="pause">Призупинити</string>
    <string name="stop">Зупинити</string>
    <string name="select_audio">Виберіть аудіофайл</string>
    <string name="select_video">Виберіть відеофайл</string>
    <string name="no_file_selected">Файл не вибрано</string>
    <string name="error_playback">Помилка відтворення</string>
    <string name="internet_url_hint">Введіть URL медіафайлу</string>
    <string name="load">Завантажити</string>
    <string name="media_loaded">Медіа завантажено</string>
    <string name="default_time">00:00 / 00:00</string>
    <string name="permission_required">Потрібен дозвіл на читання сховища</string>
    <string name="enter_url">Будь ласка, введіть URL</string>
    <string name="audio">Аудіо</string>
    <string name="video">Відео</string>
    <string name="file_type">Тип файлу</string>
</resources>