<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonSelectVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_file"
        android:padding="12dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/no_file_selected"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"/>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play"
            android:padding="12dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause"
            android:padding="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop"
            android:padding="12dp"
            android:layout_marginStart="8dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

</LinearLayout>